--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -1,4 +1,68 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="conainer"></div>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Contact</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+                        accusamus saepe nesciunt sed, obcaecati, numquam est ex fugit,
+                        molestiae libero architecto praesentium tempora dolores eos
+                        quisquam itaque molestias cupiditate explicabo.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-10 bg-light">
+
+                    <form class=" p-5 d-flex flex-column ">
+                        <div class="form-group row justify-content-end">
+                            <label for="inputEmail3" class="col-sm-1 col-form-label">Email</label>
+                            <div class="col-sm-10">
+                                <input type="email" class="form-control" id="inputEmail3" placeholder="Email" />
+                            </div>
+                        </div>
+
+                        <div class="form-group row justify-content-end">
+                                <label for="exampleFormControlTextarea1" class="col-sm-1 col-form-label">You message</label>
+                                <div class="col-sm-10">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
+                                    placeholder="Please enter your message here..."></textarea>
+                            </div>
+                        </div>
+
+                   
+                        
+                  
+                    </form>
+                    <button type="button" class="btn btn-primary btn-sm ">Primary</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
