--- a/website1/templates/navbar.html
+++ b/website1/templates/navbar.html
@@ -1,3 +1,61 @@
-<!-- your html code here -->
-<p>Hello, I'm the navbar.html</p>
-<p>Aquí estoy</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- your html code here -->
+    <div class="row">
+      <div class="col-12 bg-dark navbar navbar-expand">
+        <div class="container-fluid justify-content-start">
+          <a class="navbar-brand text-white" href="">Start Bootstrap</a>
+          <div class="">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active text-white" href="">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active text-white" href="services.html">Services</a>
+                    
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active text-white" href="portfolio.html">Portfolio</a>
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active text-white" href="contact.html">Contact</a>
+
+                </li>
+            </ul>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
