--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container p-5">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -25,31 +25,24 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-10 bg-light">
-
-                    <form class=" p-5 d-flex flex-column ">
-                        <div class="form-group row justify-content-end">
-                            <label for="inputEmail3" class="col-sm-1 col-form-label">Email</label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" id="inputEmail3" placeholder="Email" />
-                            </div>
+                
+                <form class="col-10 p-2 rounded" action="/action_page.php">
+                    <div class="col-12 bg-light p-2">
+                        <div class="form-group d-flex align-items-center text-endzz">
+                            <label class="control-label col-2" for="email"><strong class="d-flex justify-content-end align-items-center">Your email</strong></label>
+                            <input type="email" class="form-control col-10" id="email" placeholder="Enter email">
                         </div>
 
-                        <div class="form-group row justify-content-end">
-                                <label for="exampleFormControlTextarea1" class="col-sm-1 col-form-label">You message</label>
-                                <div class="col-sm-10">
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
-                                    placeholder="Please enter your message here..."></textarea>
-                            </div>
+                        <div class="form-group text-end d-flex align-items-center">
+                            <label class="col-1 col-md-2" for="exampleFormControlTextarea1"><strong>Your message</strong></label>
+                            <textarea class="form-control col-9 col-md-10" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
-
-                   
-                        
-                  
-                    </form>
-                    <button type="button" class="btn btn-primary btn-sm ">Primary</button>
-
-                </div>
+                        <div class="form-group d-flex justify-content-end">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </form>
+           
             </div>
         </div>
     </div>
