--- a/website1/templates/navbar.html
+++ b/website1/templates/navbar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -13,30 +14,46 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- your html code here -->
-    <div class="row">
-      <div class="col-12 bg-dark navbar navbar-expand">
-        <div class="container-fluid justify-content-start">
-          <a class="navbar-brand text-white" href="">Start Bootstrap</a>
-          <div class="">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 bg-dark navbar navbar-expand">
+          <div class="container-fluid justify-content-start">
+            <a class="navbar-brand text-white" href="/website1/index.html"
+              >Start Bootstrap</a
+            >
+           
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active text-white" href="">About</a>
+                  <a
+                    class="nav-link active text-white"
+                    href="/website1/templates/tagline.html"
+                    >About</a
+                  >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" href="services.html">Services</a>
-                    
+                  <a
+                    class="nav-link active text-white"
+                    href="/website1/templates/services.html"
+                    >Services</a
+                  >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" href="portfolio.html">Portfolio</a>
-
+                  <a
+                    class="nav-link active text-white"
+                    href="/website1/templates/portfolio.html"
+                    >Portfolio</a
+                  >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white" href="contact.html">Contact</a>
-
+                  <a
+                    class="nav-link active text-white"
+                    href="/website1/templates/contact.html"
+                    >Contact</a
+                  >
                 </li>
-            </ul>
-
+              </ul>
+            </div>
           </div>
         </div>
       </div>
