centrado, agrege hr. Faltan detalles en contact

--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-    <div class="container p-5">
-        <div class="container-fluid">
+
+
+    <div class="container">
+        <hr>
             <div class="row">
                 <div class="col-12">
                     <h2>Contact</h2>
@@ -44,7 +46,7 @@
                 </form>
            
             </div>
-        </div>
+        
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
