--- a/website1/templates/portfolio.html
+++ b/website1/templates/portfolio.html
@@ -13,8 +13,8 @@
 <body>
 
 
-    <div class="container p-5">
-        <div class="container-fluid">
+    <div class="container">
+        <hr>
             <div class="row">
                 <div class="col-12">
             <h2>Porfolio</h2>
@@ -49,7 +49,7 @@
                     </div>
                   </div>
                 </div>
-        </div>
+        
     </div>
 
 
