arreglando.. falta responsive :/ en navbar y tagline

--- a/website1/templates/tagline.html
+++ b/website1/templates/tagline.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 fondo pr-0 pl-0" style="height: 600px">
+        <div class="col-12 fondo" style="height: 600px">
           <div class="mt-5 text-center">
             <h1 class="display-1 bg-white font-weight-bold">One Page Wonder</h1>
           </div>
