--- a/website1/assets/css/style.css
+++ b/website1/assets/css/style.css
@@ -1,10 +1,13 @@
-body{
-    background: #BDBDBD;
+body {
+  background: #bdbdbd;
 }
-.fondo{
-    background: url(/website1/assets/img/bg.jpg);
-    background-repeat: no-repeat;
-    /* background-position: center bottom; */
-    background-size: 100%;
-
+.fondo {
+  background: url(/website1/assets/img/bg.jpg);
+  background-repeat: no-repeat;
+  /* background-position: center bottom; */
+  background-size: 100%;
+}
+.sinpadding {
+  padding-left: 0;
+  padding-right: 0;
 }
