--- a/website1/templates/first_heading.html
+++ b/website1/templates/first_heading.html
@@ -1,2 +1,20 @@
-<!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container d-flex" style="margin-left: 0;">
+        <div>
+            <h4 style="margin-top: 20px;">The First Heading<span class="text-muted"> Will catch your eyes<span></strong></h4>
+            <p>Aqui va todo el contenido del parrafo</p>
+        </div>
+        <div">
+            <img src="/website1/assets/img/1.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px;">
+        </div>
+    </div>
+</body>
+</html>
