--- a/website1/templates/services.html
+++ b/website1/templates/services.html
@@ -1,3 +1,20 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container d-flex" style="margin-left: 0;">
+        <div class="row">
+            <img src="/website1/assets/img/2.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px;">
+        </div>
+        <div>
+            <h4 class="col-7-12" style="margin-left: 20px; margin-top: 20px;">The Second heading<span class="text-muted"> Is Pretty cool too<span></strong></h4>
+            <p class="col-7-12" style="margin-left: 20px;">Aqui va todo el contenido del parrafo</p>
+        </div>
+    </div>
+</body>
+</html>
