--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container py-4">
         <hr />
         <div class="row">
             <div class="col-12">
@@ -28,25 +28,37 @@
             <div class="container-fluid d-flex justify-content-center">
                 <form class="col-10 p-2 rounded" action="/action_page.php">
                     <div class="col-12 bg-light p-2">
-                        <div class="form-group d-flex align-items-center text-endzz">
+                        <div class="form-group d-flex align-items-center">
                             <label class="control-label col-2" for="email"><strong
                                     class="d-flex justify-content-end align-items-center">Your email</strong></label>
-                            <input type="email" class="form-control col-10" id="email" placeholder="Enter email" />
+                            <input type="email" class="form-control" id="email" placeholder="Enter email" />
                         </div>
 
-                        <div class="form-group d-flex align-items-center p-0">
-                            <label class="control-label col-1 col-md-2 p-0" for="exampleFormControlTextarea1"><strong>Your message</strong></label>
-                            <textarea class="form-control col-9 col-md-10" id="exampleFormControlTextarea1"
+                        <div class="form-group d-flex align-items-center">
+                            <label class="control-label col-2" for="email"><strong
+                                class="d-flex justify-content-end align-items-center">Your message</strong></label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1"
                                 rows="3"></textarea>
                         </div>
+
                         <div class="form-group d-flex justify-content-end">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
+
                     </div>
+
                 </form>
+
             </div>
+
         </div>
+
     </div>
+
+
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
