otro push daniel

--- a/website1/templates/first_heading.html
+++ b/website1/templates/first_heading.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container d-flex" style="margin-left: 0;">
-        <div>
+    <div class="container d-flex">
+        <div class="col-12">
             <h4 style="margin-top: 20px;">The First Heading<span class="text-muted"> Will catch your eyes<span></strong></h4>
             <p>Aqui va todo el contenido del parrafo</p>
         </div>
-        <div">
+        <div class="col-12">
             <img src="/website1/assets/img/1.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px;">
         </div>
     </div>
