--- a/website1/templates/services.html
+++ b/website1/templates/services.html
@@ -7,13 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container d-flex" style="margin-left: 0;">
+    <div class="container d-flex">
         <div class="row">
-            <img src="/website1/assets/img/2.jpg" class="rounded-circle" style="max-width: 200px; max-height: 200px;">
+            <div class="col-12">
+            <img src="/website1/assets/img/2.jpg" class="rounded-circle">
+            </div>
         </div>
-        <div>
+        <div class="col-12">
             <h4 class="col-7-12" style="margin-left: 20px; margin-top: 20px;">The Second heading<span class="text-muted"> Is Pretty cool too<span></strong></h4>
             <p class="col-7-12" style="margin-left: 20px;">Aqui va todo el contenido del parrafo</p>
+        </div>
         </div>
     </div>
 </body>
