--- a/website1/templates/first_heading.html
+++ b/website1/templates/first_heading.html
@@ -13,7 +13,7 @@
             <p>Aqui va todo el contenido del parrafo</p>
         </div>
         <div class="col-12">
-            <img src="/website1/assets/img/1.jpg" class="rounded-circle">
+            <img src="/website1/assets/img/1.jpg" class="rounded-circle" style="max-width: 300px; max-height: 300px;">
         </div>
     </div>
 </body>
