--- a/website1/templates/services.html
+++ b/website1/templates/services.html
@@ -10,7 +10,7 @@
     <div class="container d-flex">
         <div class="row">
             <div class="col-12">
-            <img src="/website1/assets/img/2.jpg" class="rounded-circle">
+            <img src="/website1/assets/img/2.jpg" class="rounded-circle" style="max-height: 300px; max-width: 300px;">
             </div>
         </div>
         <div class="col-12">
