--- a/website1/templates/portfolio.html
+++ b/website1/templates/portfolio.html
@@ -2,55 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
-    <title>Document</title>
-    
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <title>Document</title>
+
 </head>
 
 <body>
 
 
-    <div class="container">
-        <hr>
-            <div class="row">
-                <div class="col-12">
-            <h2>Porfolio</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio laborum ea vel aliquid magni. Quis
-                voluptate saepe delectus. Numquam sit praesentium unde voluptates dolor incidunt porro ea? Cumque,
-                aspernatur facilis.</p>
-            </div>
+  <div class="row d-flex justify-content-center py-4">
+    <div class="col-10">
+      <div class="row">
+        <div class="col-12"> 
+          <hr>
+          <h2>Porfolio</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio laborum ea vel aliquid magni. Quis
+            voluptate saepe delectus. Numquam sit praesentium unde voluptates dolor incidunt porro ea? Cumque,
+            aspernatur facilis.</p>
         </div>
-                <div class="row">
-                <div class="card border-0 col-4">
-                    <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
-                    <div class="card-body ">
-                      <h2 class="card-title text-primary">Project name</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quae ex accusantium quo repellendus officia, facilis modi.</p>
-                      
-                    </div>
-                  </div>
-                  <div class="card border-0 col-4" >
-                    <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
-                    <div class="card-body">
-                      <h2 class="card-title text-primary">Project name</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quae ex accusantium quo repellendus officia, facilis modi.</p>
-                      
-                    </div>
-                  </div>
-                  <div class="card border-0 col-4" >
-                    <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
-                    <div class="card-body">
-                      <h2 class="card-title text-primary">Project name</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quae ex accusantium quo repellendus officia, facilis modi.</p>
-                      
-                    </div>
-                  </div>
-                </div>
-        
+      </div>
+      <div class="row">
+        <div class="card border-0 col-4">
+          <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
+          <div class="card-body ">
+            <h2 class="card-title text-primary">Project name</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quae ex accusantium
+              quo repellendus officia, facilis modi.</p>
+          </div>
+
+        </div>
+        <div class="card border-0 col-4">
+          <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title text-primary">Project name</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quae ex accusantium
+              quo repellendus officia, facilis modi.</p>
+
+          </div>
+        </div>
+        <div class="card border-0 col-4">
+          <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title text-primary">Project name</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quae ex accusantium
+              quo repellendus officia, facilis modi.</p>
+
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
 
 
@@ -72,15 +76,15 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
