--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="row py-4">
+    <div class="row my-5">
       <div class="col-12">
        
         <div class="row d-flex justify-content-center align-items-center">
