--- a/website1/templates/portfolio.html
+++ b/website1/templates/portfolio.html
@@ -13,7 +13,7 @@
 <body>
 
 
-  <div class="row d-flex justify-content-center py-4">
+  <div class="my-5 row d-flex justify-content-center ">
     <div class="col-10">
       <div class="row">
         <div class="col-12"> 
