--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -36,7 +36,7 @@
             <form class="col-7 p-2 rounded" action="/action_page.php">
               <div class="col-12 bg-light p-2">
                 <div class="form-group d-flex align-items-center">
-                  <label class="control-label col-2" for="email"
+                  <label class="control-label col-4 col-md-2" for="email"
                     ><strong
                       class="d-flex justify-content-end align-items-center"
                       >Your email</strong
@@ -51,9 +51,9 @@
                 </div>
 
                 <div class="form-group d-flex align-items-center">
-                  <label class="control-label col-2" for="email"
+                    <label class="control-label col-4 col-md-2" for="email"
                     ><strong
-                      class="d-flex justify-content-end align-items-center"
+                      class="d-flex  justify-content-end align-items-center"
                       >Your message</strong
                     ></label
                   >
