--- a/website1/templates/portfolio.html
+++ b/website1/templates/portfolio.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="card border-0 col-4">
+        <div class="card border-0 col-12 col-md-4">
           <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
           <div class="card-body ">
             <h2 class="card-title text-primary">Project name</h2>
@@ -34,7 +34,7 @@
           </div>
 
         </div>
-        <div class="card border-0 col-4">
+        <div class="card border-0 col-12 col-md-4">
           <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title text-primary">Project name</h2>
@@ -43,7 +43,7 @@
 
           </div>
         </div>
-        <div class="card border-0 col-4">
+        <div class="card border-0 col-12 col-md-4">
           <img class="card-img-top" src="https://picsum.photos/700/400" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title text-primary">Project name</h2>
