--- a/website1/templates/portfolio.html
+++ b/website1/templates/portfolio.html
@@ -11,13 +11,17 @@
 </head>
 
 <body>
-
-
+  <div class="row d-flex justify-content-center">
+    <div class="col-10">
+<hr class= "my-5">
+</div>
+</div>
+ 
   <div class="my-5 row d-flex justify-content-center ">
     <div class="col-10">
       <div class="row">
         <div class="col-12"> 
-          <hr>
+         
           <h2>Porfolio</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio laborum ea vel aliquid magni. Quis
             voluptate saepe delectus. Numquam sit praesentium unde voluptates dolor incidunt porro ea? Cumque,
