--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -1,93 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <title>Document</title>
-  </head>
+</head>
 
-  <body>
-    <div class="row my-5">
-      <div class="col-12">
-       
-        <div class="row d-flex justify-content-center align-items-center">
-          <div class="col-10">
-            <hr />
-            <h2>Contact</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-              accusamus saepe nesciunt sed, obcaecati, numquam est ex fugit,
-              molestiae libero architecto praesentium tempora dolores eos
-              quisquam itaque molestias cupiditate explicabo.
-            </p>
-          </div>
-        </div>
-
-
-        <div class="row">
-          <div class="container-fluid d-flex justify-content-center">
-            <form class="col-7 p-2 rounded" action="/action_page.php">
-              <div class="col-12 bg-light p-2">
-                <div class="form-group d-flex align-items-center">
-                  <label class="control-label col-4 col-md-2" for="email"
-                    ><strong
-                      class="d-flex justify-content-end align-items-center"
-                      >Your email</strong
-                    ></label
-                  >
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="email"
-                    placeholder="Enter email"
-                  />
-                </div>
-
-                <div class="form-group d-flex align-items-center">
-                    <label class="control-label col-4 col-md-2" for="email"
-                    ><strong
-                      class="d-flex  justify-content-end align-items-center"
-                      >Your message</strong
-                    ></label
-                  >
-                  <textarea
-                    class="form-control"
-                    id="exampleFormControlTextarea1"
-                    rows="3"
-                  ></textarea>
-                </div>
-
-                <div class="form-group d-flex justify-content-end">
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
+<body>
+    <div class="row d-flex justify-content-center">
+        <div class="col-10">
+    <hr class= "my-5">
+    </div>
     </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+
+    <div class="row my-5">
+        <div class="col-12">
+
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-10">
+
+                    <h2>Contact</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+                        accusamus saepe nesciunt sed, obcaecati, numquam est ex fugit,
+                        molestiae libero architecto praesentium tempora dolores eos
+                        quisquam itaque molestias cupiditate explicabo.
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="container-fluid d-flex justify-content-center">
+                    <form class="col-7 p-2 rounded" action="/action_page.php">
+                        <div class="col-12 bg-light p-2">
+                            <div class="form-group d-flex align-items-center">
+                                <label class="control-label col-4 col-md-2" for="email"><strong
+                                        class="d-flex justify-content-end align-items-center">Your
+                                        email</strong></label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter email" />
+                            </div>
+
+                            <div class="form-group d-flex align-items-center">
+                                <label class="control-label col-4 col-md-2" for="email"><strong
+                                        class="d-flex  justify-content-end align-items-center">Your
+                                        message</strong></label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+
+                            <div class="form-group d-flex justify-content-end">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
