--- a/website1/templates/first_heading.html
+++ b/website1/templates/first_heading.html
@@ -7,14 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container d-flex">
-        <div class="col-12">
-            <h4 style="margin-top: 20px;">The First Heading<span class="text-muted"> Will catch your eyes<span></strong></h4>
+   
+    <div class="row d-flex justify-content-center">
+        <div class="col-10">
+            <hr class= "my-5 text-light">
+            </div>
+        <div class="row">
+        <div class="col-8 text-center">
+            <h4>The First Heading<span class="text-muted"> Will catch your eyes<span></strong></h4>
             <p>Aqui va todo el contenido del parrafo</p>
         </div>
-        <div class="col-12">
+
+        <div class="col-4">
             <img src="/website1/assets/img/1.jpg" class="rounded-circle" style="max-width: 300px; max-height: 300px;">
         </div>
+    </div>
     </div>
 </body>
 </html>
