--- a/website1/templates/contact.html
+++ b/website1/templates/contact.html
@@ -13,7 +13,7 @@
 <body>
     <div class="row d-flex justify-content-center">
         <div class="col-10">
-    <hr class= "my-5">
+    <hr class= "my-5 text-light">
     </div>
     </div>
 
