--- a/website1/templates/services.html
+++ b/website1/templates/services.html
@@ -7,15 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container d-flex">
-        <div class="row">
-            <div class="col-12">
-            <img src="/website1/assets/img/2.jpg" class="rounded-circle" style="max-height: 300px; max-width: 300px;">
+    <div class="row d-flex justify-content-center">
+        <div class="col-10">
+            <hr class= "my-5 text-light">
             </div>
-        </div>
-        <div class="col-12">
-            <h4 class="col-7-12" style="margin-left: 20px; margin-top: 20px;">The Second heading<span class="text-muted"> Is Pretty cool too<span></strong></h4>
-            <p class="col-7-12" style="margin-left: 20px;">Aqui va todo el contenido del parrafo</p>
+        <div class="row">
+
+            <div class="col-5 text-end">
+            <img src="/website1/assets/img/2.jpg" class="rounded-circle">
+            </div>
+        <div class="col-7 text-center">
+            <h4>The Second heading<span class="text-muted"> Is Pretty cool too<span></strong></h4>
+            <p>Aqui va todo el contenido del parrafo</p>
         </div>
         </div>
     </div>
